# kaiwu_community

./: .gitignore  .readthedocs.yaml  CHANGELOG  CONTRIBUTING.md  LICENSE  Makefile  README.md  README_ZH.md  devel.txt  pylintrc  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  release.yml
SDD/: architecture.md
common/: config.py
docs/: conf.py  index.rst
docs/source/about/: index.rst  license.rst  release_notes.rst
docs/source/advanced/: custom_solver_optimizer.rst  index.rst
docs/source/faq/: faq.rst
docs/source/getting_started/: index.rst  introduction.rst  max_cut.rst  sdk_installation_instructions.rst  tsp.rst
docs/source/modules/: index.rst  kaiwu.classical.rst  kaiwu.common.rst  kaiwu.core.rst  kaiwu.ising.rst  kaiwu.qubo.rst  kaiwu.solver.rst  kaiwu_community.classical.rst  kaiwu_community.common.rst  kaiwu_community.core.rst  kaiwu_community.ising.rst  kaiwu_community.qubo.rst  kaiwu_community.solver.rst
example/: tsp_sdk_1_2_doc_example.py
src/kaiwu/: __init__.py
src/kaiwu/classical/: __init__.py  _brute_force.py
src/kaiwu/common/: __init__.py  _argpartition_unique_solution_pool.py  _checkpoint.py  _heap_unique_solution_pool.py  _json_serializable_mixin.py  _logger.py  _loop_controller.py  _util.py
src/kaiwu/conversion/: __init__.py  _matrix_converter.py  _model_converter.py
src/kaiwu/core/: __init__.py  _base_solver.py  _binary_expression.py  _binary_model.py  _constraint.py  _expression.py  _get_val.py  _ising.py  _matrix.py  _matrix_converter.py  _model_converter.py  _optimizer_base.py  _penalty_method_constraint.py  _qubo_model.py  _solver_base.py
src/kaiwu/ising/: __init__.py  _ising.py  _precision.py
src/kaiwu/qubo/: __init__.py  _precision.py  _qubo_model.py  _repr.py
src/kaiwu/solver/: __init__.py  _simple_solver.py
src/kaiwu_community/: __init__.py
src/kaiwu_community/classical/: __init__.py  _brute_force.py
src/kaiwu_community/common/: __init__.py  _logger.py  _util.py
src/kaiwu_community/conversion/: __init__.py  _matrix_converter.py  _model_converter.py
src/kaiwu_community/core/: __init__.py  _binary_expression.py  _binary_model.py  _constraint.py  _expression.py  _get_val.py  _matrix.py  _penalty_method_constraint.py
src/kaiwu_community/ising/: __init__.py  _ising.py  _precision.py
src/kaiwu_community/qubo/: __init__.py  _error.py  _precision.py  _qubo_model.py  _repr.py
src/kaiwu_community/solver/: __init__.py  _simple_solver.py
tests/kaiwu/common/: test_checkpoint.py  test_common.py  test_loop_controller.py  test_solution_pool.py  test_util.py
tests/kaiwu/core/: test_auto_penalty.py  test_base_solver.py  test_binary_model.py  test_expression.py  test_matrix_core.py
tests/kaiwu/qubo/: test_convert.py  test_get_min_penalty.py  test_get_val.py  test_interface.py  test_matrix.py  test_precision.py  test_qubo_expression.py  (+2 more)
(+77 files in other folders)
