[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kaiwu_community"
description = "An SDK for CIM or QUBO."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Qboson Inc" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

# 依赖写在 requirements.txt 时，这里通过动态方式加载
dynamic = ["dependencies", "version"]

[project.urls]
"Homepage" = "https://kaiwu-community.readthedocs.io"
"Documentation" = "https://kaiwu-community.readthedocs.io"
"Source" = "https://github.com/qboson/kaiwu_community"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
version = { attr = "kaiwu_community.__version__" }
